/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnSecurityTestTokenProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

import "yarn_protos.proto";

message NMTokenIdentifierNewProto {
  optional ApplicationAttemptIdProto appAttemptId = 1;
  optional NodeIdProto nodeId = 2;
  optional string appSubmitter = 3;
  optional int32 keyId = 4;
  optional string message = 5;
}

message ContainerTokenIdentifierForTestProto {
  optional ContainerIdProto containerId = 1;
  optional string nmHostAddr = 2;
  optional string appSubmitter = 3;
  optional ResourceProto resource = 4;
  optional int64 expiryTimeStamp = 5;
  optional int32 masterKeyId = 6;
  optional int64 rmIdentifier = 7;
  optional PriorityProto priority = 8;
  optional int64 creationTime = 9;
  optional LogAggregationContextProto logAggregationContext = 10;
  optional string message = 11;
  optional int32 version = 14 [default = 0];
}

